# rnix-experiments

./: .gitignore  Cargo.toml  README.md  flake.nix  test.nix.txt
src/: main.rs
