[package]
name = "rnix-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"
phf = { version = "0.11.1", features = ["macros"] }
rnix = "0.11.0"
rowan = "0.15.11"
